--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -48,7 +48,7 @@ window.addEventListener('load', () => {
 
   
   <!-- 图标字体 -->
-  <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4903580_71y8zot9v72.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4914577_wvsbbdeutur.css">
 
   
   <!-- 预加载背景图 -->
@@ -75,8 +75,8 @@ window.addEventListener('load', () => {
         <div>
           <h3 class="font-serif mb-3">社交</h3>
           <div class="space-y-2 text-sm">
-            <a href="https://github.com/MareSera" class="hover:text-accent">GitHub</a>
-            <a href="https://space.bilibili.com/1158812072" class="hover:text-accent">bilibili</a>
+            <a href="https://github.com/Kemeow815" class="hover:text-accent">GitHub</a>
+            <a href="https://space.bilibili.com/3546643173477234" class="hover:text-accent">bilibili</a>
           </div>
         </div>
         <div>
@@ -86,7 +86,7 @@ window.addEventListener('load', () => {
           </div>
         </div>
       </div>
-      <p class="text-sm">© 2024 MareSera · 诗意栖居</p>
+      <p class="text-sm">© 2025 克喵爱吃卤面 · 喵落阁</p>
     </div>
   </footer>
 
