--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -8,6 +8,13 @@ const friends = [
     url: "https://www.maresera.top/",
     desc: "本模板的作者",
     tags: ["作者"]
+  },
+  {
+    name: "Wallleap",
+    avatar: "https://gravatar.wallleap.cn/avatar/be1ccdcf025a92b98a92e331e1b3662a?size=256",
+    url: "https://myblog.wallleap.cn/",
+    desc: "Luwang's blog",
+    tags: ["大佬"]
   }
 ];
 ---
