--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -8,7 +8,14 @@ const projects = [
     tech: ["Astro", "Tailwind", "TypeScript", "Vite"],
     github: "https://github.com/MareSera/LogicLyric",
     demo: "https://logiclyric.maresera.top/"
-  }
+  },
+  {
+    name: "克喵分享",
+    desc: "克喵的分享资源的仓库",
+    tech: ["Web", "resource", "app"],
+    github: "https://github.com/Kemeow815/kemiaofx",
+    demo: "https://cdn.jsdelivr.net/gh/kmfx/tuchuang@main/img/202505132119079.png"
+  },
 ];
 ---
 
@@ -41,7 +48,7 @@ const projects = [
               class="flex-1 p-4 text-center bg-surface/50 hover:bg-accent/10 transition-colors flex items-center justify-center gap-2"
               onClick={(e) => e.stopPropagation()}
             >
-              <i class="iconfont icon-external-r text-lg" />
+              <i class="iconfont icon-yulan text-lg" />
               <span>预览项目</span>
             </a>
             <a 
@@ -50,7 +57,7 @@ const projects = [
               class="flex-1 p-4 text-center bg-surface/50 hover:bg-accent/10 transition-colors flex items-center justify-center gap-2"
               onClick={(e) => e.stopPropagation()}
             >
-              <i class="iconfont icon-github-fill text-lg" />
+              <i class="iconfont icon-github1 text-lg" />
               <span>查看源码</span>
             </a>
           </div>
