--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,21 +7,25 @@ const posts = (await getCollection('posts'))
   .slice(0, 5);
 
 const profile = {
-  avatar: "/img/tx.png",
-  motto: "代码如诗，逻辑为歌",
+  avatar: "/img/avatar.png",
+  motto: "奇迹只能一时，命运总是漫长。",
   socials: [
-    { icon: "icon-github-fill", link: "https://github.com/MareSera" },
-    { icon: "icon-bilibili", link: "https://space.bilibili.com/1158812072" }
+    { icon: "icon-github", link: "https://github.com/Kemeow815" },
+    { icon: "icon-bilibili-line", link: "https://space.bilibili.com/3546643173477234" },
+    { icon: "icon-telegram1", link: "https://t.me/KemiaoJun" },
+    { icon: "icon-twitter", link: "https://twitter.com/kemiaosw" },
+    { icon: "icon-mail1", link: "mailto:me@kemiaosw.top" },
+    { icon: "icon-wangyiyunyinle2", link: "https://music.163.com/#/playlist?id=13681647281" }
   ],
   featuredProject: {
-    title: "LogicLyric",
-    desc: "一个基于Astro的简洁好看好用的博客模板",
-    tech: ["Astro", "Tailwind", "TypeScript", "Vite"],
-    link: "https://github.com/MareSera/LogicLyric"
+    title: "kemiaofx",
+    desc: "克喵分享的仓库原项目",
+    tech: ["resource", "KeMiao", "tech", "project"],
+    link: "https://github.com/Kemeow815/kemiaofx"
   },
   todos: [
-    { text: "One", done: false },
-    { text: "Two", done: true }
+    { text: "六级过关", done: false },
+    { text: "四级过关", done: true }
   ]
 };
 ---
@@ -39,11 +43,11 @@ const profile = {
         <h1 class="text-5xl md:text-6xl font-serif mb-6">
           <div class="flex flex-col md:flex-row gap-2 items-center">
             <span class="bg-gradient-to-r from-accent to-primary bg-clip-text text-transparent">
-              代码如诗
+              一个恩赐？
             </span>
             <span class="text-primary/40 mx-2 hidden md:inline">/</span>
             <span class="bg-gradient-to-l from-primary to-accent bg-clip-text text-transparent">
-              逻辑为歌
+              一个诅咒？
             </span>
           </div>
         </h1>
@@ -86,8 +90,8 @@ const profile = {
               {/* 原有内容 */}
               <i class={`iconfont ${
                 todo.done 
-                  ? 'icon-yuanxingxuanzhong text-accent z-10' 
-                  : 'icon-yuanxingweixuanzhong text-primary/50 z-10'
+                  ? 'icon-icon-yuanxingxuanzhong text-accent z-10' 
+                  : 'icon-icon-yuanxingweixuanzhong-24x24-1px text-primary/50 z-10'
               } text-xl transition-colors`} />
               
               <span class="relative z-10 transition-all duration-300"
