--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import { getCollection } from 'astro:content';
+import PostComments from '../../components/PostComments.astro';
 import RelatedPosts from '../../components/RelatedPosts.astro';
 
 export async function getStaticPaths() {
@@ -53,5 +54,6 @@ const contentLength = post.body?.length || 0;
     </section>
 
     <RelatedPosts currentPost={post} />
+    <PostComments />
   </article>
 </BaseLayout>
