移除avatar.png, 更新网站配置及内容链接

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const posts = (await getCollection('posts'))
   .slice(0, 5);
 
 const profile = {
-  avatar: "/img/avatar.png",
+  avatar: "/img/kemiao.jpg",
   motto: "奇迹只能一时，命运总是漫长。",
   socials: [
     { icon: "icon-github", link: "https://github.com/Kemeow815" },
